# vista

./: CMakeLists.txt  readme.md
.github/: readme.adoc
benchmark/: CMakeLists.txt  algorithm_benchmark.cpp  circular_view_benchmark.cpp  sort_benchmark.cpp  std_algorithm_benchmark.cpp  std_sort_benchmark.cpp
benchmark/circular/: span_benchmark.cpp
benchmark/heap/: algorithm_benchmark.cpp  std_algorithm_benchmark.cpp
cmake/: CMakeLists.txt
doc/: CMakeLists.txt  algorithm.adoc  circular_array.adoc  circular_view.adoc  map_view.adoc  priority_view.adoc  rationale.adoc  vista.adoc
doc/circular/: CMakeLists.txt  array.adoc  span.adoc
doc/map/: CMakeLists.txt  span.adoc
doc/priority/: CMakeLists.txt  span.adoc
doc/sorted/: CMakeLists.txt  algorithm.adoc  span.adoc
example/: CMakeLists.txt
example/circular/average/: CMakeLists.txt  average.hpp  main.cpp
example/circular/concurrent/: CMakeLists.txt  main.cpp  queue.hpp
example/circular/impulse/: CMakeLists.txt  impulse.hpp  main.cpp
example/circular/p0059/: CMakeLists.txt  main.cpp  ring_span.hpp
example/sorted/rank/: CMakeLists.txt  main.cpp  rank.hpp
include/vista/: algorithm.hpp  array.hpp  circular_array.hpp  circular_view.hpp  constant_map.hpp  functional.hpp  map_array.hpp  map_view.hpp  priority_view.hpp  span.hpp  utility.hpp
include/vista/circular/: array.hpp  span.hpp
include/vista/circular/detail/: array.ipp  segment.hpp  span.ipp
include/vista/constexpr/: algorithm.hpp  array.hpp  functional.hpp  utility.hpp
include/vista/detail/: algorithm.ipp  circular_array.ipp  circular_view.ipp  config.hpp  constant_map.ipp  map_array.ipp  map_view.ipp  memory.hpp  priority_view.ipp  span.ipp  type_traits.hpp
include/vista/heap/: algorithm.hpp
include/vista/heap/detail/: algorithm.ipp
include/vista/map/: array.hpp  span.hpp
include/vista/map/detail/: array.ipp  span.ipp
include/vista/priority/: span.hpp
include/vista/priority/detail/: span.ipp
include/vista/sorted/: algorithm.hpp  span.hpp
include/vista/sorted/detail/: algorithm.ipp  span.ipp
test/: CMakeLists.txt  algorithm_constexpr_suite.cpp  algorithm_suite.cpp  circular_array_numeric_suite.cpp  circular_array_suite.cpp  circular_view_algorithm_suite.cpp  circular_view_iterator_suite.cpp  circular_view_numeric_suite.cpp  circular_view_segment_suite.cpp  circular_view_suite.cpp  constant_map_constexpr_suite.cpp  constant_map_suite.cpp  constexpr_span_suite.cpp  functional_constexpr_suite.cpp  functional_suite.cpp  map_array_suite.cpp  map_view_suite.cpp  priority_view_suite.cpp  span_constexpr_suite.cpp  span_suite.cpp  utility_constexpr_suite.cpp  utility_suite.cpp
test/circular/: array_numeric_suite.cpp  array_suite.cpp  span_algorithm_suite.cpp  span_iterator_suite.cpp  span_numeric_suite.cpp  span_segment_suite.cpp  span_suite.cpp
test/heap/: algorithm_constexpr_suite.cpp  algorithm_suite.cpp
test/map/: array_suite.cpp  span_suite.cpp
test/priority/: span_suite.cpp
test/sorted/: algorithm_constexpr_suite.cpp  algorithm_suite.cpp  span_suite.cpp
